# akonadi-calendar-tools

./: .clang-tidy  .codespellrc  .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  .pre-commit-config.yaml  .reviewboardrc  CMakeLists.txt  console-version.h.cmake  console-version.h.in  console.categories  console.renamecategories  cppcheck-suppressions.xml
calendarjanitor/: CMakeLists.txt  backuper.cpp  backuper.h  calendarjanitor.cpp  calendarjanitor.h  collectionloader.cpp  collectionloader.h  main.cpp  options.cpp  options.h
doc/: CMakeLists.txt
doc/konsolekalendar/: CMakeLists.txt  index.docbook
konsolekalendar/: CMakeLists.txt  Mainpage.dox  ROADMAP  TODO  konsolekalendar.cpp  konsolekalendar.desktop  konsolekalendar.h  konsolekalendaradd.cpp  konsolekalendaradd.h  konsolekalendarchange.cpp  konsolekalendarchange.h  konsolekalendardelete.cpp  konsolekalendardelete.h  konsolekalendarepoch.cpp  konsolekalendarepoch.h  konsolekalendarexports.cpp  konsolekalendarexports.h  konsolekalendarvariables.cpp  konsolekalendarvariables.h  main.cpp
konsolekalendar/examples/: README  tcm2kcal.pl  testkalendar.sh
konsolekalendar/pics/: CMakeLists.txt
po/ar/: calendarjanitor.po  konsolekalendar.po
po/ast/: calendarjanitor.po  konsolekalendar.po
po/az/: calendarjanitor.po  konsolekalendar.po
po/be/: konsolekalendar.po
po/bg/: calendarjanitor.po  konsolekalendar.po
po/br/: konsolekalendar.po
po/bs/: calendarjanitor.po  konsolekalendar.po
po/ca/: calendarjanitor.po  konsolekalendar.po
po/ca/docs/konsolekalendar/: index.docbook
po/ca@valencia/: calendarjanitor.po  konsolekalendar.po
po/cs/: calendarjanitor.po  konsolekalendar.po
po/cy/: konsolekalendar.po
po/da/: calendarjanitor.po  konsolekalendar.po
po/de/: calendarjanitor.po  konsolekalendar.po
po/de/docs/konsolekalendar/: index.docbook
po/el/: calendarjanitor.po  konsolekalendar.po
po/en_GB/: calendarjanitor.po  konsolekalendar.po
po/eo/: calendarjanitor.po  konsolekalendar.po
po/es/: calendarjanitor.po  konsolekalendar.po
po/es/docs/konsolekalendar/: index.docbook
po/et/: calendarjanitor.po  konsolekalendar.po
po/et/docs/konsolekalendar/: index.docbook
po/eu/: calendarjanitor.po  konsolekalendar.po
po/fa/: konsolekalendar.po
po/fi/: calendarjanitor.po  konsolekalendar.po
po/fr/: calendarjanitor.po  konsolekalendar.po
po/fy/: konsolekalendar.po
po/ga/: calendarjanitor.po  konsolekalendar.po
po/gl/: calendarjanitor.po  konsolekalendar.po
po/he/: calendarjanitor.po  konsolekalendar.po
po/hi/: calendarjanitor.po  konsolekalendar.po
po/hne/: konsolekalendar.po
po/hr/: konsolekalendar.po
po/hu/: calendarjanitor.po  konsolekalendar.po
po/ia/: calendarjanitor.po  konsolekalendar.po
po/id/: calendarjanitor.po  konsolekalendar.po
po/is/: calendarjanitor.po  konsolekalendar.po
po/it/: calendarjanitor.po  konsolekalendar.po
po/it/docs/konsolekalendar/: index.docbook
po/ja/: calendarjanitor.po  konsolekalendar.po
po/ka/: calendarjanitor.po  konsolekalendar.po
po/kk/: calendarjanitor.po  konsolekalendar.po
po/km/: konsolekalendar.po
po/ko/: calendarjanitor.po  konsolekalendar.po
po/lt/: calendarjanitor.po  konsolekalendar.po
po/lv/: calendarjanitor.po  konsolekalendar.po
po/mk/: konsolekalendar.po
po/mr/: konsolekalendar.po
po/ms/: konsolekalendar.po
po/nb/: calendarjanitor.po  konsolekalendar.po
po/nds/: calendarjanitor.po  konsolekalendar.po
po/ne/: konsolekalendar.po
po/nl/: calendarjanitor.po  konsolekalendar.po
po/nl/docs/konsolekalendar/: index.docbook
po/nn/: konsolekalendar.po
po/pa/: konsolekalendar.po
po/pl/: calendarjanitor.po  konsolekalendar.po
po/pt/: calendarjanitor.po  konsolekalendar.po
po/pt/docs/konsolekalendar/: index.docbook
po/pt_BR/: calendarjanitor.po  konsolekalendar.po
po/pt_BR/docs/konsolekalendar/: index.docbook
po/ro/: konsolekalendar.po
po/ru/: calendarjanitor.po  konsolekalendar.po
po/ru/docs/konsolekalendar/: index.docbook
po/sa/: calendarjanitor.po  konsolekalendar.po
po/se/: konsolekalendar.po
po/sk/: calendarjanitor.po  konsolekalendar.po
po/sl/: calendarjanitor.po  konsolekalendar.po
po/sl/docs/konsolekalendar/: index.docbook
po/sq/: konsolekalendar.po
po/sv/: calendarjanitor.po  konsolekalendar.po
po/sv/docs/konsolekalendar/: index.docbook
po/ta/: calendarjanitor.po  konsolekalendar.po
po/tg/: konsolekalendar.po
po/tr/: calendarjanitor.po  konsolekalendar.po
po/ug/: calendarjanitor.po  konsolekalendar.po
po/uk/: calendarjanitor.po  konsolekalendar.po
po/uk/docs/konsolekalendar/: index.docbook
po/uz/: konsolekalendar.po
po/uz@cyrillic/: konsolekalendar.po
po/xh/: konsolekalendar.po
po/zh_CN/: calendarjanitor.po  konsolekalendar.po
po/zh_TW/: calendarjanitor.po  konsolekalendar.po
